--- a/home.html
+++ b/home.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form>
+        <datagrid>
+            <i class="fas fa-car-side    "></i>
+        </datagrid>
+    </form>
 </body>
 </html>
