--- a/home.html
+++ b/home.html
@@ -8,17 +8,7 @@
 </head>
 <body>
     <form>
-        <datagrid>
-            <i class="fas fa-car-side    "></i>
-            dsjklfdfa-spindds kjdsfjlhds fhlsdhjfdsjlfdjs hf 
-            dsdfdsfihdsi fjsdlfsj 
-            sdsdfksjdflksdfdsfsd 
-            dsfsdfihisdljfk sdf 
-            'zxc.mzxcnlzx,fndlfdsf
-            fdfbflfb;<i class="fd]fbdf;ldfgdfhgdfjgdf
-            
-            fdfdiilhfdfdffas fa-dice-five    "></i>
-        </datagrid>
+        hello        
     </form>
 </body>
 </html>
